--- a/src/components/Title.astro
+++ b/src/components/Title.astro
@@ -1,6 +1,5 @@
 <h1>
-    <span>Tools For</span><br>
-    <span>Developing</span> 💻
+    <slot />
 </h1>
 
 <style>
@@ -11,6 +10,10 @@
         padding: 0;
         text-align: center;
         margin-top: 20px;
+        color: whitesmoke;
+        background: black;
+        -webkit-background-clip: text;
+        -webkit-text-stroke: 3px black;
     }
 
     span {
