--- a/src/pages/framework/[id].astro
+++ b/src/pages/framework/[id].astro
@@ -19,14 +19,13 @@ const { title, img, language, destination } = data
 const { Content } = await render(framework)
 ---
 
-<Layout title={`${title} - Language`}>
+<Layout title={`${title} - Framework`}>
     <Title>
         <span>Frameworks</span> 💼
     </Title>
     <div class="image-container">
         <aside>
             <img
-            transition:animate="slide"
              transition:name=`img-${slug}` 
              src={`/${img}`} 
              alt={title} 
