--- a/src/components/AstroHero.astro
+++ b/src/components/AstroHero.astro
@@ -38,7 +38,7 @@
 
     .banner {
         height: 400px;
-        background-image: url('../../public/AstroBanner.png');
+        background-image: url('/AstroBanner.png');
         background-size: cover;
         background-position: center;
         border-radius: 12px;
