--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import ViewTransitions from 'astro/components/ViewTransitions.astro';
+import Footer from '../components/Footer.astro';
 
 interface Props {
 	title: string;
@@ -20,7 +21,10 @@ const { title } = Astro.props;
 	</head>
 	<body>
 		<ViewTransitions />
-		<slot />
+		<div class="content-site">
+			<slot />	
+		</div>
+		<Footer />
 	</body>
 </html>
 <style is:global>
@@ -39,7 +43,7 @@ const { title } = Astro.props;
 		font-family: system-ui, sans-serif;
 		background: linear-gradient(to right, #323946, #13151a);
 	}
-	body{
+	.content-site{
 		max-width: 1200px;
 		margin: 0 auto;
 		padding: 0 1rem;
