Fixed Go Back margin, and finish GitHubRepo Button.

--- a/src/pages/framework/[id].astro
+++ b/src/pages/framework/[id].astro
@@ -74,6 +74,7 @@ const { Content } = await render(framework)
         float: right;
         text-decoration: none;
         transition: transform 0.3s ease;
+        margin: 2rem;
     }
 
     a:hover {
