--- a/src/pages/tool/[id].astro
+++ b/src/pages/tool/[id].astro
@@ -73,6 +73,7 @@ const { Content } = await render(tool)
         float: right;
         text-decoration: none;
         transition: transform 0.3s ease;
+        margin: 2rem;
     }
 
     a:hover {
