--- a/src/components/Links.astro
+++ b/src/components/Links.astro
@@ -88,7 +88,7 @@
 
     /* GitHub */
     .containerOne:hover {
-    background-color: #15017a;
+    background-color: #000000;
     transition-duration: .3s;
     }
 
